# senpai

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  senpai.code-workspace
.github/workflows/: ci.yml  release.yml
docs/: gain-ptc-redesign.md
resources/config/: burr.yaml  containerized.yaml  dao.yaml  local-localastrometry.yaml  local.yaml  local2.yaml
senpai/: __init__.py  astrometry.py  exceptions.py  settings.py
senpai/api/: main.py
senpai/api/models/: examples.py  returns.py
senpai/api/routes/: astrometry.py  senpai.py
senpai/api/tests/: conftest.py  test_api.py
senpai/astrometry/: __init__.py  astroeasy_backend.py  constants.py  indices.py  runner.py
senpai/catalog/: README.md  __init__.py  constants.py  gaia.py  gaia_local.py  gaia_mirror.py  gaia_transforms.py  runner.py  sdss.py  sstr7.py  sstrc7_management.py
senpai/cli/: batch.py  burr.py  calibrate.py  catalog_magnitude_analysis.py  common.py  coverage.py  detect.py  measure_gain.py  photometry.py  plotting.py  rate.py  rate_sidereal.py  sidereal.py
senpai/core/: __init__.py  config.py  constants.py  logging.py
senpai/engine/: __init__.py  constants.py
senpai/engine/detection/: jacobian.py  kernels.py  track_mode.py
senpai/engine/detection/point/: fwhm.py  satellite.py  satellite_extra.py  sidereal.py  sidereal_extra.py
senpai/engine/detection/streak/: extraction.py  extraction_extra.py  frame_shift.py  masking.py  masking_extra.py  rate_extraction.py  rate_rate.py  rate_sidereal.py  sidereal_sidereal.py  sidereal_streak.py  validation.py  validation_extra.py
senpai/engine/models/: astrometry.py  images.py  metadata.py  senpai.py  starfield.py  streak_measurement.py
senpai/engine/observability/: __init__.py  calibration.py  detector_gain.py
senpai/engine/photometry/: color_terms.py  photometry.md  utils.py
senpai/engine/plotting/: axes.py  images.py  normalization.py  photometry.py  psf.py  replot.py  wcs_diagnostics.py
senpai/engine/processing/: __init__.py  collect.py  photometry_pipeline.py  rate.py  rate_scan_confirmation.py  sidereal.py  stamp_confirmation.py  streak_correlation.py
senpai/engine/tests/: test_aperture_sums.py  test_burr_adapter.py  test_burr_replot.py  test_calibration.py  test_calibration_frames.py  test_catalog_logic.py  test_color_terms.py  test_config.py  test_detector_gain.py  test_export_coco.py  test_fits_io.py  test_frame_organization.py  test_gaia_local.py  test_gaia_sky_cache.py  test_masking.py  test_models.py  test_photometry_synthetic.py  test_photometry_zp.py  test_point_detection.py  test_preprocessing.py  test_streak_extraction.py  test_streak_geometry.py  test_streak_validation.py  test_track_rate_units.py
senpai/engine/utils/: astrometry_diagnostics.py  coordinates.py  darks.py  file_io.py  fits_io.py  flats.py  frame_organization.py  memory.py  preprocessing.py  propagate_wcs.py  serialization.py  simulation.py  stats.py  streak_chain.py  wcs_helpers.py  wcs_ops.py  wcs_refinement.py  wcs_validation.py
senpai/export/: README.md  __init__.py  cli.py  coco.py  dataset_split.py  example_folder.py
senpai/integrations/: __init__.py
senpai/integrations/burr/: __init__.py  filenames.py  night.py  replot.py  run_state.py
tests/: conftest.py
tests/api/: __init__.py  conftest.py  test_api.py
tests/astrometry/: test_astrometric_fit.py  test_astrometry_solver.py  test_solver_mode.py
tests/data/: output_starlistinimage.json
tests/engine/: __init__.py  test_aperture_sums.py  test_burr_adapter.py  test_burr_replot.py  test_calibration.py  test_calibration_frames.py  test_catalog_logic.py  test_catalog_query.py  test_color_terms.py  test_config.py  test_detector_gain.py  test_export_coco.py  test_fits_io.py  test_flats.py  test_frame_organization.py  test_gaia_local.py  test_gaia_sky_cache.py  test_masking.py  test_memory.py  test_models.py  test_photometry_synthetic.py  test_photometry_zp.py  test_point_detection.py  test_point_detection_engine.py  test_preprocessing.py  test_regressions.py  test_senpai_models.py  test_stats.py  test_streak_correlation.py  test_streak_extraction.py  test_streak_geometry.py  test_streak_validation.py  test_track_rate_units.py  test_wcs_helpers.py  test_wcs_model.py  test_wcs_propagation.py
